[gd_scene load_steps=15 format=3 uid="uid://uupnshwavo1f"]

[ext_resource type="Script" uid="uid://wjqfpdnkxstf" path="res://Scenes/EnemyScenes/Boss/water_boss.gd" id="1_pp8il"]
[ext_resource type="Script" uid="uid://d4a26yarihxtv" path="res://Scripts/StateMachine/state_machine.gd" id="1_ppwsl"]
[ext_resource type="Script" uid="uid://buvlgko6t4lmk" path="res://Scripts/StateMachine/states/idle.gd" id="2_g18ng"]
[ext_resource type="Script" uid="uid://co72o1wx05awn" path="res://Scripts/StateMachine/states/move.gd" id="3_jdye3"]
[ext_resource type="Script" uid="uid://hc0my844aetm" path="res://Scripts/StateMachine/states/jump.gd" id="4_sdv7w"]
[ext_resource type="Script" uid="uid://d3d652csc6xbx" path="res://Scripts/StateMachine/states/fall.gd" id="5_pp8il"]
[ext_resource type="Script" uid="uid://kbrvd8rthkxd" path="res://Scripts/StateMachine/states/death.gd" id="6_hdpnf"]
[ext_resource type="Script" uid="uid://rmb87n48c1f0" path="res://Scripts/HealthSystem/health.gd" id="7_sdv7w"]
[ext_resource type="Script" uid="uid://cye0ywfwe3wo0" path="res://Scripts/HealthSystem/hurtbox.gd" id="8_pp8il"]
[ext_resource type="Script" uid="uid://dle1tft7k67rn" path="res://Scripts/HealthSystem/hitbox.gd" id="9_hdpnf"]
[ext_resource type="Script" uid="uid://req8gm7ko6e0" path="res://Scripts/Enemy/enemy_movement_component.gd" id="11_hdpnf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t02p7"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ssygn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1a4fm"]
radius = 5.0
height = 18.0

[node name="WaterBoss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 64
collision_mask = 64
script = ExtResource("1_pp8il")

[node name="Health" type="Node" parent="."]
script = ExtResource("7_sdv7w")
max_health = 2.0
metadata/_custom_type_script = "uid://rmb87n48c1f0"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t02p7")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ssygn")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("1_ppwsl")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "death_state")]
script = ExtResource("2_g18ng")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
death_state = NodePath("../death")
animation_name = "idle"
move_speed = 100.0

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "death_state")]
script = ExtResource("3_jdye3")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
death_state = NodePath("../death")
animation_name = "move"
move_speed = 75.0

[node name="jump" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "death_state")]
script = ExtResource("4_sdv7w")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
death_state = NodePath("../death")
jump_force = 100.0
move_speed = 100.0

[node name="fall" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "death_state")]
script = ExtResource("5_pp8il")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
death_state = NodePath("../death")
move_speed = 100.0

[node name="death" type="Node" parent="state_machine"]
script = ExtResource("6_hdpnf")
move_speed = 0.0

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
collision_mask = 2
script = ExtResource("8_pp8il")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(1.6, 1.16)
shape = SubResource("CapsuleShape2D_1a4fm")

[node name="HitBox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("9_hdpnf")
metadata/_custom_type_script = "uid://dle1tft7k67rn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(1.6, 1.16)
shape = SubResource("CapsuleShape2D_1a4fm")

[node name="attack_state_machine" type="Node" parent="."]
script = ExtResource("1_ppwsl")

[node name="move_component" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("11_hdpnf")
parent = NodePath("..")

[node name="AttackIntermTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
